# seafile-shell-ext

./: .gitignore  Makefile  README.md
common/: applet-connection.cpp  applet-connection.h  commands-base.h  ext-common.h  ext-config.h  ext-utils.cpp  ext-utils.h  log.cpp  log.h
extensions/: CMakeLists.txt  applet-connection.cpp  applet-connection.h  build.sh  commands.cpp  commands.h  context-menu.cpp  debug-register.reg  debug-unregister.reg  dll.cpp  ext-common.h  ext-config.cpp  ext-utils.cpp  guids.h  i18n.cpp  icon-overlay.cpp  log.cpp  repo-info.h  seafile_ext.aps  seafile_ext.def  seafile_ext.vcxproj  seafile_ext.vcxproj.filters  shell-ext.cpp  shell-ext.h
linux/seadrive-dfm-ext/: CMakeLists.txt  gui-connection.cpp  gui-connection.h  seadrive-dfm-extension.cpp  seadrive-emblemicon-plugin.cpp  seadrive-emblemicon-plugin.h  seadrive-menu-plugin.cpp  utils.cpp  utils.h
linux/seadrive-dfm-ext/debian/: control  files  seadrive-dfm-ext.substvars
linux/seadrive-dfm-ext/debian/.debhelper/seadrive-dfm-ext/: dbgsym-build-ids
linux/seadrive-dfm-ext/debian/.debhelper/seadrive-dfm-ext/dbgsym-root/DEBIAN/: control  md5sums
linux/seadrive-dfm-ext/debian/seadrive-dfm-ext/DEBIAN/: control  md5sums
linux/seadrive-nautilus-ext/: README.md  install.sh  seadrive_extension.py
msi/: ext.wxi  seadrive_ext.wxi  seadrive_ext.wxs  shell.wxs
seadrive-dfm-ext/: CMakeLists.txt  rpc-client.cpp  rpc-client.h  seadrive-dfm-extension.cpp  seadrive-emblemicon-plugin.cpp  seadrive-emblemicon-plugin.h  seadrive-menu-plugin.cpp  seadrive-menu-plugin.h  utils.cpp  utils.h
seadrive-dfm-ext/debian/: copyright
seadrive-thumbnail-ext/: CMakeLists.txt  ExportFunctions.def  Reg.cpp  Reg.h  build.sh  class-factory.cpp  class-factory.h  cleanthumbnail.bat  commands.cpp  commands.h  dev-build.sh  dllmain.cpp  ext-config.cpp  framework.h  provider.cpp  provider.h  seadrive-thumbnail-ext.sln  seadrive-thumbnail-ext.vcxproj  seadrive_ext.vcxproj  seadrive_thumbnail_ext.sln
shellext-fix/: CMakeLists.txt  build.sh  shellext-fix.sln  shellext-fix.vcxproj  shellext-fix.vcxproj.filters
shellext-fix/resources/: shellext-fix.manifest  shellext-fix.rc
shellext-fix/src/: log.cpp  log.h  main.cpp  registry.cpp  registry.h
windows/common/: applet-connection.h  ext-utils.h
windows/extensions/: class-factory.cpp  class-factory.h  commands.cpp  context-menu.cpp  dll.cpp  guids.h  icon-overlay.cpp  repo-info.cpp  seafile_ext.rc  seafile_ext.sln  seafile_ext.vcxproj  seafile_ext.vcxproj.filters
windows/seadrive-thumbnail-ext/: README.md  ext-config.cpp  provider.cpp  seadrive_ext.vcxproj  seadrive_thumbnail_ext.sln
(+1 files in other folders)
